# bancointer

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  python-app.yml  python-publish.yml
docs/: Makefile  api.rst  changelog.md  conf.py  high-level-api.rst  index.rst  inter.rst  low-level-api.rst  make.bat  modules.rst  readme.md
inter/: __init__.py  _client.py  _inter.py  inter.py  testing.py
tests/: __init__.py  conftest.py  test_client.py  test_inter.py  test_operation.py  test_payment.py
