[project]
name="bancointer"
version = "0.0.7"
description = "Client to consume Banco Inter APIs"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["bancointer"]
authors = [
  {name="Lucas Rangel Cezimbra", email="lucas@cezimbra.tec.br"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
dependencies = [
  "attrs==22.1.0",
  "requests==2.28.1",
]

[project.urls]
homepage = "https://github.com/lucasrcezimbra/bancointer"
documentation = "https://bancointer.readthedocs.io/"
repository = "https://github.com/lucasrcezimbra/bancointer"
changelog = "https://github.com/lucasrcezimbra/bancointer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = [
  "flit>=3.4"
]
docs = [
  "myst-parser==0.18.0",
  "Sphinx==5.1.1",
  "sphinx-rtd-theme==1.0.0",
]
test = [
  "bump2version==1.0.1",
  "coverage==6.4.4",
  "coveralls==3.3.1",
  "faker==14.2.1",
  "flake8==5.0.4",
  "pre-commit==2.20.0",
  "pytest==7.1.3",
  "pytest-cov==3.0.0",
  "pytest-mock==3.8.2",
  "responses==0.22.0",
  "tox==3.26.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "inter"

[tool.flit.sdist]
include = ["LICENSE", "README.md"]
exclude = ["contrib", "docs", "pytest.ini", "tox.ini", "test*"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38, flake8

[travis]
python =
    3.8: py38
    3.7: py37
    3.6: py36

[testenv:flake8]
basepython = python
deps = flake8
commands = flake8 ultratenant tests

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -r{toxinidir}/requirements_dev.txt
; If you want to make tox run the tests with the same versions, create a
; requirements.txt with the pinned versions and uncomment the following line:
;     -r{toxinidir}/requirements.txt
commands =
    pip install -U pip
    pytest --basetemp={envtmpdir}

"""
