[project]
name="bancointer"
version = "0.1.1"
description = "Client to consume Banco Inter APIs"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["bancointer"]
authors = [
  {name="Lucas Rangel Cezimbra", email="lucas@cezimbra.tec.br"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
dependencies = [
  "attrs",
  "requests",
]

[project.urls]
homepage = "https://github.com/lucasrcezimbra/bancointer"
documentation = "https://bancointer.readthedocs.io/"
repository = "https://github.com/lucasrcezimbra/bancointer"
changelog = "https://github.com/lucasrcezimbra/bancointer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = [
  "flit>=3.4"
]
docs = [
  "myst-parser==4.0.0",
  "Sphinx==8.1.3",
  "sphinx-rtd-theme==2.0.0",
]
test = [
  "bump2version==1.0.1",
  "coverage==7.6.9",
  "coveralls==3.3.1",
  "faker==33.1.0",
  "pre-commit==4.0.1",
  "pytest==8.3.4",
  "pytest-cov==4.1.0",
  "pytest-mock==3.14.0",
  "responses==0.25.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "inter"

[tool.flit.sdist]
include = ["LICENSE", "README.md"]
exclude = ["contrib", "docs", "pytest.ini", "tox.ini", "test*"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"
