[tool.poetry]
name = "bancointer"
version = "0.1.1"
description = "Client to consume Banco Inter APIs"
readme = "README.md"
license = "LGPL-2.0-only"
keywords = ["bancointer"]
authors = ["Lucas Rangel Cezimbra <lucas@cezimbra.tec.br>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
packages = [
  {include = "inter"}
]

[tool.poetry.urls]
homepage = "https://github.com/lucasrcezimbra/bancointer"
documentation = "https://bancointer.readthedocs.io/"
repository = "https://github.com/lucasrcezimbra/bancointer"
changelog = "https://github.com/lucasrcezimbra/bancointer/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.11"
attrs = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
codecov = "^2.1.13"
faker = "^37.3.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
responses = "^0.25.7"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.1"
Sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"
